--- a/PDF2News/frontend/src/app/home-page/home-page.component.html
+++ b/PDF2News/frontend/src/app/home-page/home-page.component.html
@@ -1,1 +1,18 @@
-<p>home-page works!</p>
+<form #searchForm='ngForm' (ngSubmit)='searchPdfs(searchForm)'>
+    <mat-form-field>
+        <input matInput placeholder="Search Pdfs" required #search='ngModel' name='search' [(ngModel)]='query.search'>
+        <mat-error *ngIf="search.invalid && (search.dirty || search.touched)">
+            <div *ngIf="search.errors.required">
+                A search query is required.
+            </div>
+        </mat-error>
+    </mat-form-field>
+    <br>
+    <button mat-raised-button type='submit'>Search</button>
+</form>
+<br>
+<mat-grid-list cols="3" rowHeight="1:1">
+    <mat-grid-tile *ngFor='let p of pdfUrls'>
+        <img [src]='p' class="tile-pdf">
+    </mat-grid-tile>
+</mat-grid-list>
