--- a/PDF2News/frontend/src/app/top-bar/top-bar.component.html
+++ b/PDF2News/frontend/src/app/top-bar/top-bar.component.html
@@ -1,1 +1,8 @@
-<p>top-bar works!</p>
+<mat-toolbar>
+    <a (click)='toggleMenu()' class="menu-button">
+        <i class="material-icons">
+            menu
+        </i>
+    </a>
+    PDF Gallery App
+</mat-toolbar>
