--- a/PDF2News/frontend/src/app/upload-page/upload-page.component.html
+++ b/PDF2News/frontend/src/app/upload-page/upload-page.component.html
@@ -4,12 +4,13 @@
 <h2>Add Pdf</h2>
 <form #pdfForm='ngForm' (ngSubmit)='save(pdfForm)'>
     <div>
-        <input type="file" id="file" (change)="handleFileInput($event.target.files)" #photoUpload>
+        <input type="file" id="file" (change)="handleFileInput($event.target.files)" #pdfUpload>
         <button mat-raised-button (click)='clickUpload()' type='button'>
-            Upload Pdf
+            Choose file
         </button>
         {{pdfData?.file?.name}}
     </div>
+
     <mat-form-field>
         <input matInput placeholder="Description" required #description='ngModel' name='description'
             #description='ngModel' [(ngModel)]='pdfData.description'>
@@ -19,6 +20,7 @@
             </div>
         </mat-error>
     </mat-form-field>
+
     <br>
     <mat-form-field>
         <input matInput placeholder="Tags" required #tags='ngModel' name='tags' [(ngModel)]='pdfData.tags'
@@ -29,41 +31,50 @@
             </div>
         </mat-error>
     </mat-form-field>
+
     <br>
-    <button mat-raised-button type='submit'>Save</button>
+    <button mat-raised-button type='submit'>Upload</button>
 </form>
+
 <br>
 <h2>Manage Pdfs</h2>
+
 <table mat-table [dataSource]="pdfArrayData" class="mat-elevation-z8">
     <ng-container matColumnDef="pdfUrl">
-        <th mat-header-cell *matHeaderCellDef> Pdf </th>
+        <th mat-header-cell *matHeaderCellDef> Photo </th>
         <td mat-cell *matCellDef="let pdf">
             <img [src]='pdf.pdfUrl' class="pdf">
         </td>
     </ng-container>
-<ng-container matColumnDef="description">
+
+    <ng-container matColumnDef="description">
         <th mat-header-cell *matHeaderCellDef> Description </th>
         <td mat-cell *matCellDef="let pdf"> {{pdf.description}} </td>
     </ng-container>
-<ng-container matColumnDef="tags">
+
+    <ng-container matColumnDef="tags">
         <th mat-header-cell *matHeaderCellDef> Tags </th>
         <td mat-cell *matCellDef="let pdf"> {{pdf.tags}} </td>
     </ng-container>
-<ng-container matColumnDef="edit">
+
+    <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef> Edit </th>
         <td mat-cell *matCellDef="let pdf; let i = index">
             <button mat-raised-button (click)='openEditDialog(i)'>Edit</button>
         </td>
     </ng-container>
-<ng-container matColumnDef="delete">
+
+    <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef> Delete </th>
         <td mat-cell *matCellDef="let pdf; let i = index">
             <button mat-raised-button (click)='deletePdf(i)'>Delete</button>
         </td>
     </ng-container>
-<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
 <mat-paginator [length]="totalPdfs" [pageSize]="10" [pageSizeOptions]="[10]"
     (page)="page = $event.pageIndex + 1; getPdfs()">
 </mat-paginator>
