--- a/PDF2News/frontend/src/styles.scss
+++ b/PDF2News/frontend/src/styles.scss
@@ -1,18 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 
-body{
-    font-family: "Roboto", sans-serif;
-    margin: 0;
+body {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
 }
 
-form{
-    mat-form-field{
-        width: 95%;
-        margin: 0 auto;
-    }
+form {
+  mat-form-field {
+    width: 95%;
+    margin: 0 auto;
+  }
 }
 
-.center{
-    text-align: center;
+.center {
+  text-align: center;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
