--- a/PDF2News/frontend/src/app/top-bar/top-bar.component.scss
+++ b/PDF2News/frontend/src/app/top-bar/top-bar.component.scss
@@ -11,6 +11,6 @@
 .mat-toolbar-row,
 .mat-toolbar-single-row {
   height: 64px;
-  background-color: #fc036b;
+  background-color: #001f87;
   color: white;
 }
