Added mat-card in upload page

--- a/PDF2News/frontend/src/app/top-bar/top-bar.component.scss
+++ b/PDF2News/frontend/src/app/top-bar/top-bar.component.scss
@@ -5,12 +5,12 @@
 }
 
 .menu-button {
-  color: white;
+  color: #e6f0f3;
 }
 
 .mat-toolbar-row,
 .mat-toolbar-single-row {
   height: 64px;
-  background-color: #001f87;
-  color: white;
+  background-color: #002140;
+  color: #fcf7f0;
 }
