--- a/PDF2News/frontend/src/app/upload-page/upload-page.component.scss
+++ b/PDF2News/frontend/src/app/upload-page/upload-page.component.scss
@@ -10,3 +10,12 @@ table.mat-table,
 .pdf {
   width: 50px;
 }
+
+.render-result{
+  width: 500px;
+}
+
+.pdf-extension-logo{
+  background-image: url(../../pdf.ico);
+  background-size: cover;
+}
