--- a/PDF2News/frontend/src/app/upload-page/upload-page.component.html
+++ b/PDF2News/frontend/src/app/upload-page/upload-page.component.html
@@ -35,6 +35,24 @@
     <br>
     <button mat-raised-button type='submit'>Upload</button>
 </form>
+<br>
+
+<h2>Rendered Result</h2>
+
+<mat-card class="render-result">
+    <mat-card-header>
+        <div mat-card-avatar class="pdf-extension-logo"></div>
+        <mat-card-title>Named Entities found: </mat-card-title>
+        <mat-card-subtitle>Cookie id: </mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>Send entities to Owlin's API</button>
+        <button mat-button>Discard</button>
+    </mat-card-actions>
+</mat-card>
 
 <br>
 <h2>Manage Pdfs</h2>
