Added sqlalchemy engine; added two columns: sessionId, status, per Pdf

--- a/PDF2News/frontend/src/app/upload-page/upload-page.component.html
+++ b/PDF2News/frontend/src/app/upload-page/upload-page.component.html
@@ -49,6 +49,7 @@
     
     </mat-card-content>
     <mat-card-actions>
+        <button mat-button>Edit entities</button> 
         <button mat-button>Send entities to Owlin's API</button>
         <button mat-button>Discard</button>
     </mat-card-actions>
