--- a/PDF2News/frontend/src/app/upload-page/upload-page.component.html
+++ b/PDF2News/frontend/src/app/upload-page/upload-page.component.html
@@ -43,7 +43,7 @@
     <mat-card-header>
         <div mat-card-avatar class="pdf-extension-logo"></div>
         <mat-card-title>Named Entities found: </mat-card-title>
-        <mat-card-subtitle>Username: {{username}}</mat-card-subtitle>
+        <mat-card-subtitle>Session ID: {{sessionId}}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
     
